# sdk-python

./: .env.example  .gitignore  AGENTS.md  README.md  codegen.py  generate.py  lefthook.yml  pyproject.toml
.github/workflows/: release.yml
examples/: app.py  fastapi_app.py
specs/: angel-numbers-openapi.json  astrology-openapi.json  crystals-openapi.json  dreams-openapi.json  iching-openapi.json  location-openapi.json  numerology-openapi.json  openapi.json  tarot-openapi.json  vedic-astrology-openapi.json
src/roxy_sdk/: __init__.py  factory.py
tests/: test_factory.py  test_live.py
