[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "roxy-sdk"
version = "0.1.1"
description = "Python SDK for RoxyAPI. Astrology, tarot, numerology, and more."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]
keywords = ["astrology", "tarot", "numerology", "api", "sdk", "vedic", "horoscope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://roxyapi.com"
Repository = "https://github.com/RoxyAPI/sdk-python"
Documentation = "https://roxyapi.com/docs"

[tool.uv.build-backend]
module-name = "roxy_sdk"
module-root = "src"
source-exclude = ["**/_generated/**", "**/__pycache__/**"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/roxy_sdk/factory.py", "codegen.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
